--- a/index.html
+++ b/index.html
@@ -3,18 +3,68 @@
 	<head>
 		<title>Kenny 11-2</title>
 	</head>
-	<body bgcolor="black " text="blue red" style="border:15px double black; font-size:11px"  background="pic.png">
-	<h1 style="text-align:center">I'm Fat </h1>
-	<hr>
-	<hr>
-	<hr>
-		<h1> What are you looking at!</h1>
-		<p>Helo World!</p>
-		<img src="team.png" height="500" width="500">
+	<body>
+		<center><body bgcolor="black " text="#8765" style="border:15px double black; font-size:100px"  background="black>
+		<h1 style="text-align:center">Basketball</h1></center>
+		<p>
+			<center><font size="10" color="green"> Basic question</font></center>
+			
+			<font size="5" color="red">What is Basketball?
+			<center><img src="1.png"  height="500" width="600"></center>
+			<center><font size="5" color="white"> Basketball is a very popular sport.</center>
+			
+			<center><font size="3">It is a game that played between two teams of five players in which goals are scored by throwing a ball through a netted hoop fixed at each end of the court.</center>
+			
+			<font size="5" color="red">Why do you want to play Basketball?
+			<center><img src="3.png"  height="500" width="600"></center>
+			<center><font size="3" color="white">I was very lonely, so I want to make friends by playing basketball.</center>
+			
+			
+			
+			<center><font size="10" color="green"> The step of how can people improve their skill</font></center>
+			
+			
+			<font size="5" color="red">How to handle a ball?
+			<center><img src="4.png"  height="500" width="600"></center>
+			<center><font size="3" color="white"> Practive this kind of activity everyday.</center>
+
+
+			<font size="5" color="red">How to run with a ball?
+			<center><img src="2.png"  height="500" width="600"></center>
+			
+			<font size="5" color="red">How to put a ball into the basket?
+			<center><img src="5.png"  height="500" width="450"></center>
+			<center><font size="3" color="white"> You have to jump on a person's body, then you will know how to put the ball into the basket.</center>
+
+			
+			<font size="5" color="red">How to shot a ball?
+			<center><img src="7.png"  height="500" width="600"></center>
+			<center><font size="3" color="white"> You also have to jump on a person's body, then you will know how to shot the ball.</center>
+
+			
+			<font size="5" color="red">How to guard people?
+			<center><img src="6.png"  height="500" width="600"></center>
+			
+			
+			<center><font size="10" color="green"> How can people have more kinds of abilities in Playing Basketball</font></center>
+			
+			
+			<font size="5" color="red">Long-distance running
+			<center><img src="8.png"  height="500" width="600"></center>
+			
+			<font size="5" color="red">Shuttle run
+			<center><img src="9.png"  height="500" width="600"></center>
+			
+			<font size="5" color="red">Jumping ability training
+			<center><img src="10.png"  height="500" width="900"></center>
+			
+			<font size="5" color="red">Practive race or sparring race
+			<center><img src="11.png"  height="500" width="600"></center>
+			<center><font size="3" color="white"> Go to basketball court and play with your friends on the weekend.</center>
+
+			
+		</p>
 	</body>
-
-
-
 </html>	
 	
 		
